Add struct. concurr. test
Added test showing stuctured concurrency and scoped values
Added test showing stuctured concurrency and scoped values..