@@ -172,6 +172,7 @@ tasks.withType(Test).each {
   it.useJUnitPlatform()
   it.systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
   it.jvmArgs += "-XX:StartFlightRecording:filename=${layout.buildDirectory.get().asFile}/reports/${name}.jfr"
+  it.jvmArgs += '--enable-preview'
   it.testLogging {
     events 'failed', 'skipped', 'passed'
   }
